# discord-bot

./: .gitignore  Dockerfile  README.md  a2as.yaml  pyproject.toml  requirements.txt
adk-bot/: .env.template  README.md  app.py  config.py  main.py  requirements.txt
adk-bot/agents/: __init__.py  cache.py  common.py  document_reader_agent.py  initial_decision_maker.py  root_agent.py  vertex_search_agent.py
adk-bot/agents/prompts/: adk_search.txt  decision_agent_prompt.txt  document_reader.txt  root_agent.txt  shared_prompt.txt
adk-bot/discord_engine/: __init__.py  memory.py
adk-bot/tests/: test_adk_search.py  test_in_thread_replies.py  test_reply_decision_making.py
bot/: consent_management.py  discord_cache.py  gemini_model.py  gemini_tools.py  imagen.py  main.py  requirements.txt
genai-bot/: README.md
genai-bot/bot/: Dockerfile  default_system_instructions.txt  discord_cache.py  main.py  requirements.txt
genai-bot/k8s/: deployment_template.yaml  discord_bot_sys_instructions_template.yaml  discord_token_secret_template.yaml  gemini_api_key_secret_template.yaml
k8s/: .gitignore
